# aiy-rs

./: .gitignore  Cargo.toml  README.md  bin_to_safetensors.py  fp16_to_fp32.py  fp32_to_fp16.py  init-latents.safetensors  未命名绘图.drawio
examples/: aiy.rs  clip.py  demo2.rs  example.rs  hello-world.rs  load-unet.rs  safetensors-load.rs  sd-demo.rs  sdxl-test.py  sdxl.py  test.py
src/: aiy_sd.rs  attention.rs  bpe.rs  clip.rs  clip_configs.rs  embeddings.rs  example_models.rs  lib.rs  model_kind.rs  resnet.rs  sd-vae-v2.1-config.json  sdxl-unet-v0.9-config.json  sdxl-vae-v0.9-config.json  types.rs  unet_2d.rs  unet_2d_blocks.rs  unet_config.rs  utils.rs  vae.rs
src/aiy_sd/: builder.rs  config.default.toml  config.rs  mod.rs  types.rs
src/clip/: activation.rs  bpe.rs  bytes_to_unicode.rs  config.default.toml  config.rs  mod.rs  tokenizer.py  tokenizer.rs
src/schedulers/: config.ddim.default.toml  config.euler_discrete.default.toml  ddim.rs  euler_discrete.rs  mod.rs  types.rs
src/unet/: config.default.toml  mid_block.rs  mod.rs  unet_2d.rs  unet_2d_blocks.rs  unet_config.rs
src/vae/: config.default.toml  decoder.rs  encoder.rs  mod.rs
